--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ certifi==2018.8.24
 chardet==3.0.4
 coverage==4.5.1
 coveralls==1.5.1
+dj-database-url==0.5.0
 Django==2.2.10
+django-cors-headers==3.10.0
 django-cors-middleware==1.2.0
 django-extensions==1.7.1
 django-filter==2.0.0
@@ -11,13 +13,15 @@ djangorestframework-jwt==1.11.0
 docopt==0.6.2
 factory-boy==2.11.1
 Faker==0.9.2
+gunicorn==20.1.0
 idna==2.7
 Markdown==3.0.1
+psycopg2-binary==2.8.6
 PyJWT==1.6.4
 python-dateutil==2.7.3
 pytz==2018.5
 requests==2.20.0
 six==1.16.0
+sqlparse==0.4.2
 text-unidecode==1.2
 urllib3==1.24.2
-psycopg2-binary==2.8.6
